WIP test commit action

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -53,3 +53,8 @@ jobs:
             - name: Functional Non-Snapshot Tests
               run: |
                   npm run test:func:nosnaps
+
+            - name: Performance Benchmark
+              if: "!startsWith(github.event.head_commit.message, 'WIP')"
+              run: |
+                  npm run build:analyze
