--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,6 +5,7 @@ on:
         branches:
             - develop
             - release
+            - test-github-action
     # run for every pull request
     pull_request: {}
 jobs:
