try github actions lighthouse

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -56,6 +56,20 @@ jobs:
                   npm run test:func:nosnaps
 
             - name: Performance Benchmark
-              if: "!startsWith(github.event.head_commit.message, 'WIP')"
+              if: "startsWith(github.event.head_commit.message, 'WIP')"
               run: |
                   npm run build:analyze
+
+    lighthouse:
+      runs-on: ubuntu-latest
+      steps:
+        - uses: actions/checkout@v2
+        - name: Audit URLs using Lighthouse
+          uses: treosh/lighthouse-ci-action@v8
+          with:
+            urls: |
+              ${{ secrets.LIGHTHOUSE_HOME }}/?stage_tag=julia_test_2021
+              ${{ secrets.LIGHTHOUSE_HOME }}/category/jewelry?stage_tag=julia_test_2021
+            budgetPath: ./benchmark.json # test performance budgets
+            uploadArtifacts: true # save results as an action artifacts
+            temporaryPublicStorage: true # upload lighthouse report to the temporary storage
