--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,6 +10,7 @@ on:
     pull_request: {}
 jobs:
     main:
+        if: "startsWith(github.event.head_commit.message, 'WIP')"
         runs-on: ubuntu-latest
         strategy:
             matrix:
@@ -66,10 +67,11 @@ jobs:
         - uses: actions/checkout@v2
         - name: Audit URLs using Lighthouse
           uses: treosh/lighthouse-ci-action@v8
+          env: 
+            SUPER_SECRET: ${{ secrets.LIGHTHOUSE_HOME }}
           with:
-            super_secret: ${{ secrets.LIGHTHOUSE_HOME }}
             urls: |
-              "$SUPER_SECRET"/?stage_tag=julia_test_2021
-              "$SUPER_SECRET"/category/jewelry?stage_tag=julia_test_2021
+              "$env:SUPER_SECRET"/?stage_tag=julia_test_2021
+              "$env:SUPER_SECRET"/category/jewelry?stage_tag=julia_test_2021
             uploadArtifacts: true # save results as an action artifacts
             temporaryPublicStorage: true # upload lighthouse report to the temporary storage
