--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -71,7 +71,7 @@ jobs:
             SUPER_SECRET: ${{ secrets.LIGHTHOUSE_HOME }}
           with:
             urls: |
-              "$env:SUPER_SECRET"/?stage_tag=julia_test_2021
-              "$env:SUPER_SECRET"/category/jewelry?stage_tag=julia_test_2021
+              $SUPER_SECRET/?stage_tag=julia_test_2021
+              $SUPER_SECRET/category/jewelry?stage_tag=julia_test_2021
             uploadArtifacts: true # save results as an action artifacts
             temporaryPublicStorage: true # upload lighthouse report to the temporary storage
