--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -65,8 +65,20 @@ jobs:
       runs-on: ubuntu-latest
       steps:
         - uses: actions/checkout@v2
+
+        - name: Setup node
+          uses: actions/setup-node@v1
+          with:
+              node-version: ${{ matrix.node }}
+
+        - name: 📥 Download deps
+          uses: bahmutov/npm-install@v1
+          with:
+              useLockFile: false
+
         - name: Audit URLs using Lighthouse
           uses: treosh/lighthouse-ci-action@v8
+          runs: 3
           env: 
             SUPER_SECRET: ${{ secrets.LIGHTHOUSE_HOME }}
           with:
@@ -74,3 +86,8 @@ jobs:
               http://lighthouse-ecommerce.herokuapp.com/
             uploadArtifacts: true # save results as an action artifacts
             temporaryPublicStorage: true # upload lighthouse report to the temporary storage
+
+        - name: Test Manifest Var
+        env:
+          TEST_VAR: ${{steps.LHCIAction.outputs.manifest}}
+          run: node tools/performance/manifest.js
