--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -78,16 +78,16 @@ jobs:
 
         - name: Audit URLs using Lighthouse
           uses: treosh/lighthouse-ci-action@v8
-          runs: 3
           env: 
             SUPER_SECRET: ${{ secrets.LIGHTHOUSE_HOME }}
           with:
             urls: |
               http://lighthouse-ecommerce.herokuapp.com/
+            runs: 3
             uploadArtifacts: true # save results as an action artifacts
             temporaryPublicStorage: true # upload lighthouse report to the temporary storage
 
         - name: Test Manifest Var
           env:
             TEST_VAR: ${{steps.LHCIAction.outputs.manifest}}
-          runs: node tools/performance/manifest.js
+          run: node tools/performance/manifest.js
