--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -84,7 +84,8 @@ jobs:
           with:
             urls: |
               http://lighthouse-ecommerce.herokuapp.com/
-            runs: 3
+            runs: 4
+            configPath: tools/performance/lighthouserc.js
             uploadArtifacts: true # save results as an action artifacts
             temporaryPublicStorage: true # upload lighthouse report to the temporary storage
 
