--- a/.npmrc
+++ b/.npmrc
@@ -1,3 +1,3 @@
-registry=https://npm.paypal.com
+registry=https://registry.npmjs.org
 package-lock=false
 puppeteer_download_host='https://commondatastorage.googleapis.com'
